GoalTracker/force-app/main/default/objects/Reporting_Segment__c/Reporting_Segment__c.object-meta.xml
<CustomObject>
    <description>Captures Alumni of Record, Parent and Student of Record affiliation by Fiscal Year</description>
    <label>Reporting Segment</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Reporting Segments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>