GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <description>AQ_Custom</description>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Campus</valueSetName>
    </valueSet>
</CustomField>