GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Class_Desc__c.field-meta.xml
<CustomField>
    <fullName>Class_Desc__c</fullName>
    <description>AQ_Custom</description>
    <label>Class Desc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freshman</fullName>
            </value>
            <value>
                <fullName>Sophomore</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Doctoral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>