GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Class_Year__c.field-meta.xml
<CustomField>
    <fullName>Class_Year__c</fullName>
    <description>AQ_Custom</description>
    <label>Class Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>