GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <description>AQ_Custom</description>
    <label>College</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>School</valueSetName>
    </valueSet>
</CustomField>