GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reporting Segments</relationshipLabel>
    <relationshipName>Reporting_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>