GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Current_FY_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AQ_Custom</description>
    <label>Current FY Indicator</label>
    <type>Checkbox</type>
</CustomField>