GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Degree_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>Degree_Level_Code__c</fullName>
    <description>AQ_Custom</description>
    <label>Degree Level Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>