GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Dept__c.field-meta.xml
<CustomField>
    <fullName>Dept__c</fullName>
    <description>AQ_Custom</description>
    <label>Dept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIT</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>ART</fullName>
            </value>
            <value>
                <fullName>BMD</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>HSS</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>M00</fullName>
            </value>
            <value>
                <fullName>MEG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>