GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>AQ_Custom</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AQB__DivisionUnit</valueSetName>
    </valueSet>
</CustomField>