GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Domestic_V_International__c.field-meta.xml
<CustomField>
    <fullName>Domestic_V_International__c</fullName>
    <description>AQ_Custom</description>
    <label>Domestic V. International</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>