GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Faculty_or_Staff__c.field-meta.xml
<CustomField>
    <fullName>Faculty_or_Staff__c</fullName>
    <description>AQ_Custom</description>
    <label>Faculty or Staff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>