GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Faculty_Staff_Active__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Staff_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AQ_Custom</description>
    <label>Faculty/Staff Active Y/N</label>
    <type>Checkbox</type>
</CustomField>