GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>AQ_Custom</description>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>