GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/HR_Dept__c.field-meta.xml
<CustomField>
    <fullName>HR_Dept__c</fullName>
    <description>AQ_Custom</description>
    <label>HR Dept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>111008</fullName>
            </value>
            <value>
                <fullName>112202</fullName>
            </value>
            <value>
                <fullName>112300</fullName>
            </value>
            <value>
                <fullName>120000</fullName>
            </value>
            <value>
                <fullName>130100</fullName>
            </value>
            <value>
                <fullName>135300</fullName>
            </value>
            <value>
                <fullName>210000</fullName>
            </value>
            <value>
                <fullName>210100</fullName>
            </value>
            <value>
                <fullName>210400</fullName>
            </value>
            <value>
                <fullName>210500</fullName>
            </value>
            <value>
                <fullName>210501</fullName>
            </value>
            <value>
                <fullName>220000</fullName>
            </value>
            <value>
                <fullName>220007</fullName>
            </value>
            <value>
                <fullName>220210</fullName>
            </value>
            <value>
                <fullName>220310</fullName>
            </value>
            <value>
                <fullName>220410</fullName>
            </value>
            <value>
                <fullName>220700</fullName>
            </value>
            <value>
                <fullName>220706</fullName>
            </value>
            <value>
                <fullName>220800</fullName>
            </value>
            <value>
                <fullName>232201</fullName>
            </value>
            <value>
                <fullName>240260</fullName>
            </value>
            <value>
                <fullName>240400</fullName>
            </value>
            <value>
                <fullName>240600</fullName>
            </value>
            <value>
                <fullName>240700</fullName>
            </value>
            <value>
                <fullName>240800</fullName>
            </value>
            <value>
                <fullName>240900</fullName>
            </value>
            <value>
                <fullName>241000</fullName>
            </value>
            <value>
                <fullName>252501</fullName>
            </value>
            <value>
                <fullName>260100</fullName>
            </value>
            <value>
                <fullName>260500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>