GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/HR_Division__c.field-meta.xml
<CustomField>
    <fullName>HR_Division__c</fullName>
    <label>HR Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C21000</fullName>
            </value>
            <value>
                <fullName>C22000</fullName>
            </value>
            <value>
                <fullName>C23000</fullName>
            </value>
            <value>
                <fullName>C24000</fullName>
            </value>
            <value>
                <fullName>C25000</fullName>
            </value>
            <value>
                <fullName>C26000</fullName>
            </value>
            <value>
                <fullName>C27000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>