GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>CMU Faculty/Staff Job TItle</inlineHelpText>
    <label>Faculty/Staff Job Title</label>
    <length>65</length>
    <type>Text</type>
</CustomField>