GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Parent_Active_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Parent_Active_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AQ_Custom</description>
    <label>Parent Active Y/N</label>
    <type>Checkbox</type>
</CustomField>