GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/SIS_ID__c.field-meta.xml
<CustomField>
    <fullName>SIS_ID__c</fullName>
    <description>AQ_Custom</description>
    <label>SIS ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>