GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/Student_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_Record_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AQ_Custom</description>
    <label>Student Active Y/N</label>
    <type>Checkbox</type>
</CustomField>