GoalTracker/force-app/main/default/objects/Reporting_Segment__c/fields/U_G_Level__c.field-meta.xml
<CustomField>
    <fullName>U_G_Level__c</fullName>
    <description>AQ_Custom</description>
    <label>U_G Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>