GoalTracker/force-app/main/default/objects/Reporting_Segment__c/recordTypes/AQB_Alumni.recordType-meta.xml
<RecordType>
    <fullName>AQB_Alumni</fullName>
    <active>true</active>
    <description>CMU Alumni</description>
    <label>Alumni</label>
</RecordType>