GoalTracker/force-app/main/default/objects/Reporting_Segment__c/recordTypes/AQB_Faculty_Staff.recordType-meta.xml
<RecordType>
    <fullName>AQB_Faculty_Staff</fullName>
    <active>true</active>
    <description>CMU Faculty or Staff</description>
    <label>Faculty/Staff</label>
</RecordType>