GoalTracker/force-app/main/default/objects/Reporting_Segment__c/recordTypes/AQB_Parent.recordType-meta.xml
<RecordType>
    <fullName>AQB_Parent</fullName>
    <active>true</active>
    <description>CMU Parent of Student</description>
    <label>Parent</label>
</RecordType>