GoalTracker/force-app/main/default/objects/Reporting_Segment__c/recordTypes/AQB_Student.recordType-meta.xml
<RecordType>
    <fullName>AQB_Student</fullName>
    <active>true</active>
    <description>CMU Student</description>
    <label>Student</label>
</RecordType>